# Height-Calculator-v3

./: .gitignore  CMakeLists.txt  README.md  about.cpp  about.ui  heightprocessing.cpp  heightprocessing.h  heightprocessing.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  resources.qrc
